# remote-shell-mcp

./: README.md  install.bat  install_service.bat  openclaw_mcp_config.json  pyproject.toml  start.bat
src/: connection_manager.py  server.py  ssh_handler.py  telnet_handler.py
