[project]
name = "mcp-remote-shell"
version = "0.1.0"
description = "MCP server for SSH/Telnet remote device control (Streamable HTTP)"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "paramiko>=3.4.0",
    "bcrypt>=4.0.0",
    "cryptography>=42.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []
